--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,5 @@
 Thumbs.db
 # Useless directories
 .idea/
-# Unused css/less
-static/css/agency_original.css
-static/css/timeline.css
-static/less/timeline.less
+# Unused img backup
+static/img-backup/
