--- a/app/www/package.json
+++ b/app/www/package.json
@@ -15,6 +15,7 @@
   "author": "Jesse Bartola",
   "license": "ISC",
   "dependencies": {
+    "@loadable/component": "^5.14.1",
     "@types/babel-core": "^6.25.6",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
